# preflight

./: .gitignore  LICENSE  README.md  pyproject.toml  test-response.txt  verify_db.py
src/preflight/: ai_reviewer.py  database.py  display_utils.py  git_utils.py  issue_display.py  main.py  notification.py  report_generator.py  system_prompt.txt  system_prompt2.txt  test_diff.txt
tests/: test_report_gen.py
